Add 3d image generation

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
-        <div id="images">
-            
+        <div id="images"></div>
+        <canvas id="depthMap"></canvas>
+        <div id="stereoImages">
+            <canvas id="leftImage"></canvas>
+            <canvas id="rightImage"></canvas>
         </div>
+        <canvas id="anaglyph"></canvas>
         <script src="index.js"></script>
     </body>
 </html>
