Allow saving and restoring settings

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <h1>Image Stacker v1.0</h1>
+        <div class="thirdContainer">
+            <div class="oneThird buttonContainer" id="newStack">New Stack</div>
+            <div class="oneThird buttonContainer" id="loadSettings">Load Settings</div>
+            <div class="oneThird buttonContainer" id="saveSettings">Save Settings</div>
+        </div>
         <div class="buttonContainer" id="images">
             Click here to load images
         </div>
