Add useDepthMap option to enable use of old animation algorithm

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
                     <label for="animationSpeed">Animation Speed</label>
                     <input class="settingsValue" type="range" id="animationSpeed" min="25" max="400" value="100">
                 </div>
+                <div>
+                    <label for="useDepthMap">Use Depth Map</label>
+                    <input class="settingsValue" type="checkbox" id="useDepthMap">
+                </div>
             </div>
         </div>
         <div class="disabledButton buttonContainer centeredBlock" id="computeAnimation">Compute Animation</div>
